Renamed ServiceCaller to Caller.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+--- CHANGES SINCE JCALLER 0.2 ------------------------------------------------
+
+* Renamed ServiceCaller to Caller.
+* Added missing API docs for LibraryContext methods.
+
+
 --- CHANGES SINCE JCALLER 0.1 (COMPARED TO XINS 2.X) -------------------------
 
 * Changed package names from org.xins.common.service to org.znerd.jcaller.
